--- a/src/styles/components/_note.scss
+++ b/src/styles/components/_note.scss
@@ -13,15 +13,21 @@
 
   h3 {
     color: clr("accent", 500);
+    font-size: 2em;
+    line-height: 1.3;
+    font-weight: 500;
   }
 
   time {
     color: clr("gray", 500);
     justify-self: end;
+    font-size: 0.75em;
   }
 
   div {
     grid-column: 1 / -1;
+    font-size: 1em;
+    line-height: 1.2;
 
     *:where(:not(:first-child)) {
       margin-block-start: 1rem;
